err/simplesitetemplate.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Paste-2.0.3.dist-info'...
Listing './lib/python3.5/site-packages/SimpleSiteTemplate-0.1.egg-info'...
Listing './lib/python3.5/site-packages/paste'...
Listing './lib/python3.5/site-packages/paste/auth'...
Listing './lib/python3.5/site-packages/paste/cowbell'...
Listing './lib/python3.5/site-packages/paste/debug'...
Listing './lib/python3.5/site-packages/paste/evalexception'...
Listing './lib/python3.5/site-packages/paste/evalexception/media'...
Listing './lib/python3.5/site-packages/paste/exceptions'...
Listing './lib/python3.5/site-packages/paste/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplesitetemplate'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/config'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/controllers'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/lib'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/model'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/css'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/animation'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/assets'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/connection'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/container'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/editor'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/element'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/json'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/reset-fonts-grids'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/public/yui/2.6.0/yahoo-dom-event'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/base'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/component'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/account'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/comment'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/error'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/nav'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/page'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/section'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/templates/derived/tag'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/tests'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/+package+/tests/functional'...
Listing './lib/python3.5/site-packages/simplesitetemplate/template/docs'...
Compiling './lib/python3.5/site-packages/simplesitetemplate/template/ez_setup.py'...
***   File "./lib/python3.5/site-packages/simplesitetemplate/template/ez_setup.py", line 94
    except pkg_resources.VersionConflict, e:
                                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
